Text - Ctrl backspace when text is highlighted then typing crashes blender #52860

Closed
opened 2017-09-21 03:37:21 +02:00 by Carlo Andreacchio · 6 comments

System Information
Ubuntu 17.04 GTX 1080

Blender Version
Broken: 77dccbf481

Short description of error
Text is highlighted, then pressing ctrl backspace then typing anything will crash blender

Exact steps for others to reproduce the error

  1. open new blender
  2. shift a -> t (new text)
  3. tab (edit mode)
  4. ctrl a (select all text)
  5. ctrl backspace (delete text)
  6. press any letter will crash blender
**System Information** Ubuntu 17.04 GTX 1080 **Blender Version** Broken: 77dccbf481 **Short description of error** Text is highlighted, then pressing ctrl backspace then typing anything will crash blender **Exact steps for others to reproduce the error** 1. open new blender 2. shift a -> t (new text) 3. tab (edit mode) 4. ctrl a (select all text) 5. ctrl backspace (delete text) 6. press any letter will crash blender

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

Confirmed on Windows 7 with builds 77dccbf, 2.79 release, 2.70a

Selecting text with Ctrl + A then Ctrl + Backspace and pressing any key will crash with an Exception.

Confirmed on Windows 7 with builds `77dccbf`, 2.79 release, 2.70a Selecting text with Ctrl + A then Ctrl + Backspace and pressing any key will crash with an Exception.
Campbell Barton self-assigned this 2017-09-21 10:49:46 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 806bc55a34

This issue was referenced by 806bc55a34581d49065a5c6221746b6e50715a1d
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52860
No description provided.