Fix T52860: 3D Text crashes w/ Ctrl Backspace